elk/ES_StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: elk
  name: elasticsearch
  labels:
    service: elasticsearch
spec:
  serviceName: elasticsearch
  # Number of PODS
  replicas: 1
  selector:
    matchLabels:
      service: elasticsearch
  template:
    metadata:
      labels:
        service: elasticsearch
    spec:
      terminationGracePeriodSeconds: 15
      containers:
      - name: elasticsearch
        image: elastic/elasticsearch:6.4.3
        resources:
          limits:
            cpu: 2000m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 1Gi
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: tcp
        volumeMounts:
        - name: elasticsearch-pvc
          mountPath: /usr/share/elasticsearch/data
        - name: elasticsearch-configmap
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          subPath: elasticsearch.yml
        - name: elasticsearch-configmap
          mountPath: /usr/share/elasticsearch/config/role_mapping.yml
          subPath: role_mapping.yml
      volumes:
      - name: elasticsearch-pvc
        persistentVolumeClaim:
           claimName: elasticsearch-pvc
      - name: elasticsearch-configmap
        configMap:
            name: elasticsearch-configmap
