elk/Filebeat_DaemonSet.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  namespace: elk
  name: filebeat
  labels:
    component: filebeat
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      component: filebeat
  template:
    metadata:
      creationTimestamp: null
      labels:
        component: filebeat
    spec:
      containers:
      - args:
        - -e
        - -c
        - /etc/filebeat/filebeat.yml
        command:
        - filebeat
        image: elastic/filebeat:6.4.3
        imagePullPolicy: Always
        name: filebeat
        resources: {}
        securityContext:
          privileged: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/filebeat/filebeat.yml
          name: config
          subPath: filebeat.yml
        - mountPath: /var/log/containers
          name: varlog
        - mountPath: /var/log/pods
          name: varlogpods
          readOnly: true
        - mountPath: /var/lib/docker/containers
          name: varlibdockercontainers
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 0600
          name: filebeat-configmap
        name: config
      - hostPath:
          path: /var/log/containers
          type: ""
        name: varlog
      - hostPath:
          path: /var/log/pods
          type: ""
        name: varlogpods
      - hostPath:
          path: /var/lib/docker/containers
          type: ""
        name: varlibdockercontainers
