elk/Logstash_Deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: elk
  name: logstash
  labels:
    component: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
     component: logstash
  template:
    metadata:
      labels:
        component: logstash
    spec:
      containers:
      - name: logstash
        image: elastic/logstash:6.4.3
        volumeMounts:
        - name: logstash-configmap
          mountPath: /usr/share/logstash/config/logstash.yml
          subPath: logstash.yml
        - name: logstash-configmap
          mountPath: /usr/share/logstash/pipeline/logstash.conf
          subPath: logstash.conf
        # - name: logstash-configmap
        #   mountPath: /usr/share/logstash/config/pipelines.yml
        #   subPath: pipelines.yml
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
          name: http
          protocol: TCP
      volumes:
        - name: logstash-configmap
          configMap:
            name: logstash-configmap
