elk/Logstash_Service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: elk
  name: logstash
  labels:
    component: logstash
spec:
  type: ClusterIP
  selector:
    component: logstash
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5043
